--- a/WebAPI.Web/Views/Admin/Index.cshtml
+++ b/WebAPI.Web/Views/Admin/Index.cshtml
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <!-- overlayScrollbars -->
     <link rel="stylesheet" href="/Assets/admin/css/adminlte.min.css">
-
+    <link href="~/Assets/admin/css/adminlte.css" rel="stylesheet" />
     <!-- icheck bootstrap -->
     <link rel="stylesheet" href="/Assets/admin/css/icheck-bootrap/icheck-bootstrap.min.css">
 
